--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "API.AI Shipping Costs Webhook",
+  "name": "API.AI Shipping AA Name",
   "description": "API.AI Shipping Costs Webhook Sapmple",
-  "repository": "https://github.com/svet4/shipping-costs-sample",
+  "repository": "https://github.com/shatrunjai/api.ai.aa.name",
   "logo": "http://xvir.github.io/img/apiai.png",
   "keywords": ["api.ai", "natural language"]
 }
